remove warings